[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/InvisiBlockAll.png" type="Texture" id=1]
[ext_resource path="res://Buttons/Blocks/Scripts/ButtonBlockUp.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]

[node name="ButtonBlockUp" type="RigidBody2D"]
mode = 1
contacts_reported = 3
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 1 )
hframes = 8
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -2
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="PushBlockArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushBlockArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="PushBlockArea" to="." method="_on_PushBlockArea_body_entered"]
[connection signal="body_exited" from="PushBlockArea" to="." method="_on_PushBlockArea_body_exited"]
